
WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.5` (in progress)

- [ADD] Terse syntax alternatives for `span-opts` map parameter in `new-span!` and related functions that create spans.
- [ADD] Convenience function `add-event!` to add an event to the bound or current span.
- Bump deps
* [MAINT] OpenTelemetry `1.31.0`

=== `0.2.4.1` (2023-10-01)

- [ADD] Module `clj-otel-sdk-extension-autoconfigure` which wraps the autoconfigure OpenTelemetry SDK extension.
Updated guide on using the autoconfigure module and adding initialisation code to application.
- [ADD] Updated functions to use a default `OpenTelemetry` instance declared by `clj-otel`, falling back to the global `OpenTelemetry` instance declared by Java OpenTelemetry if no default instance was previously configured.
Added recommendation to prefer use of default `OpenTelemetry` instance over the global `OpenTelemetry` instance, when using autoconfigure module or programmatic configuration of SDK.
Use of system property `otel.java.global-autoconfigure.enabled` or environment variable `OTEL_JAVA_GLOBAL_AUTOCONFIGURE_ENABLED` is discouraged.
- [BREAK] `steffan-westcott.clj-otel.sdk.otel-sdk/init-otel-sdk!` has a new option `register-shutdown-hook` enabled by default.
- [ADD] New middleware (formerly part of the microservices examples)
* `wrap-exception-event` adds an exception event to the server span.
This is intended for use by applications which transform the exception to an HTTP response in a subsequent middleware.
* `wrap-reitit-route` adds the matched Reitit route to the server span and request map.
- [ADD] New interceptor `exception-event-interceptor` adds an exception event to the server span.
This is intended for use by applications which transform the exception to an HTTP response in a subsequent interceptor.
- [ADD] Function `steffan-westcott.clj-otel.instrumentation.runtime-telemetry-java8/close!` to stop JVM telemetry.