@@ -1,0 +1,6 @@
+*
+!deps.edn
+!build.clj
+!clj-otel-*/deps.edn
+!clj-otel-*/src/**
+!clj-otel-*/resources/**
