@@ -1,0 +1,5 @@
+*
+!opentelemetry-javaagent.jar
+!common/*/deps.edn
+!common/*/src/**
+!microservices/**/deps.edn
