@@ -1,3 +1,5 @@
 #!/usr/bin/env bash
-cd ../../../..
-clojure -T:build examples :projects '["sentence-summary-load-gen","sentence-summary-service","word-length-service"]'
+(cd ../../..                  ; ./build-microservices-base.sh)
+(cd sentence-summary-load-gen ; docker build -t example.clj-otel/sentence-summary-load-gen .)
+(cd sentence-summary-service  ; docker build -t example.clj-otel/sentence-summary-service .)
+(cd word-length-service       ; docker build -t example.clj-otel/word-length-service .)
