@@ -1,3 +1,5 @@
 #!/usr/bin/env bash
-cd ../../../..
-clojure -T:build examples :projects '["puzzle-load-gen","puzzle-service","random-word-service"]'
+(cd ../../..            ; ./build-microservices-base.sh)
+(cd puzzle-load-gen     ; docker build -t example.clj-otel/puzzle-load-gen .)
+(cd puzzle-service      ; docker build -t example.clj-otel/puzzle-service .)
+(cd random-word-service ; docker build -t example.clj-otel/random-word-service .)
