@@ -1,7 +1,14 @@
-FROM eclipse-temurin:17-alpine
-LABEL clj-otel.example="puzzle"
+FROM example.clj-otel/microservices-base AS builder
+RUN mkdir -p /build/examples/microservices/manual-instrument/middleware/random-word-service
+WORKDIR /build
+COPY . /build/examples/microservices/manual-instrument/middleware/random-word-service
+RUN clojure -T:build uberjar :project '"random-word-service"'
+FROM eclipse-temurin:21-alpine
+LABEL example.clj-otel=random-word-service
 EXPOSE 8081
-COPY target/random-word-service-standalone.jar /service.jar
+COPY --from=builder \
+     /build/examples/microservices/manual-instrument/middleware/random-word-service/target/random-word-service-standalone.jar \
+     /service.jar
 ENTRYPOINT ["java", \
             "-Dotel.resource.attributes=service.name=random-word-service", \
             "-Dclojure.tools.logging.factory=clojure.tools.logging.impl/log4j2-factory", \
