@@ -28,6 +28,7 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 
 - [ADD] Terse syntax alternatives for `span-opts` map parameter in `new-span!` and related functions that create spans.
 - [ADD] Convenience function `add-event!` to add an event to the bound or current span.
+- [MAINT] Ensure example microservices uberjars are built and run on the same JDK.
 - Bump deps
 * [MAINT] OpenTelemetry `1.31.0`
 
